# Repository-for-it-classes

./: 0217a.cpp  1330a  1352a  1585a.cpp  4a  bin_search.cpp
amirova_z_a/: 0136a.cpp  0263a.cpp  0617a.cpp  0967b.cpp  1.cpp  1017a.cpp  1330a.cpp  1512c.cpp  1585a.cpp  1670b.cpp  1717b.cpp  1721b.cpp  1744d.cpp  2.cpp  bmp_22_4_1.cpp  bmp_22_4_2.cpp  bmp_22_4_3.cpp  bmp_22_4_6.cpp  library  num_denum_lib.cpp
amirova_z_a/geom/: CMakeLists.txt  geom.h
amirova_z_a/geom/geom/: CMakeLists.txt  geom.cpp  geom.h  test.cpp
amirova_z_a/rational/: CMakeLists.txt  rational.cpp  rational.h
